--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11",
+    "js-md5": "^0.7.3",
+    "mdb-vue-ui-kit": "^2.0.0",
+    "vue": "^2.7.8",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
   },
