--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.4",
     "js-md5": "^0.7.3",
     "mdb-vue-ui-kit": "^2.0.0",
+    "portal-vue": "^2.1.7",
     "vue": "^2.7.8",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2"
